--- a/src/config.ini
+++ b/src/config.ini
@@ -1,11 +1,8 @@
 ; EXAMPLE CONFIGPARSER
 ; relative paths
-[paths]
-PDF_FORM = src\Templates\pdf_template.pdf
-WORD_FORM = src\Templates\word_template.docx
-INPUT_EXCEL = src\Data\exceldata.xlsx
-INPUT_DB = src\Data\database.sqlite
-OUTPUT = src\Out\word_output.docx
+[settings]
+watch_dir = 
+search_number = 
 ; both slashes possible "/" and "\"
 ; Probleme bei Ä, Ö, Ü
 ; For Testing always add "Testing\" at the beginning.
