--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
 [settings]
-watch_dir = I:\einkauf\Analysenzertifikate
-search_number = 4500191608
+watch_dir = D:/Benutzer/Geschäft/KUALA LUMPUR KEPONG BERHAD/KLK Europe - QKL - Hedingen - Dokumente
+search_pattern = 1
 
