--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,1 @@
-altgraph==0.17.4
-colorama==0.4.6
-cx_Freeze==7.1.1
-cx_Logging==3.2.0
-iniconfig==2.0.0
-lief==0.14.1
-packaging==24.1
-pefile==2023.2.7
-pluggy==1.5.0
-pyinstaller==6.9.0
-pyinstaller-hooks-contrib==2024.7
-pytest==8.2.2
-pytest-mock==3.14.0
-python-dotenv==1.0.1
-pywin32-ctypes==0.2.2
-setuptools==70.3.0
-wheel==0.43.0
+watchdog==4.0.1
