--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
 [settings]
 watch_dir = D:/Benutzer/Geschäft/KUALA LUMPUR KEPONG BERHAD/KLK Europe - QKL - Hedingen - Dokumente
-search_pattern = 1
+search_pattern = 0123456789
 
