--- a/src/config_noGUI.ini
+++ b/src/config_noGUI.ini
@@ -1,4 +1,4 @@
 [settings]
 watch_dir = D:\\Benutzer\\Geschäft\\KUALA LUMPUR KEPONG BERHAD\\KLK Europe - QKL - Hedingen - Dokumente
-search_pattern = 0123456789
+search_pattern = print_TESTING.docx
 
